Fix disclosure button icon alignment

--- a/src/assets/styles/components/_disclosure-button.scss
+++ b/src/assets/styles/components/_disclosure-button.scss
@@ -6,6 +6,7 @@
 	color: $blue-500;
 	display: inline-block;
 	display: inline-flex;
+	flex-direction: column;
 	font-size: rem(16);
 	height: rem(34);
 	justify-content: center;
